# svg_playground

./: .gitmodules  CMakeLists.txt  README.md  svg.cpp  svg.h  xerces.cpp
src/: CMakeLists.txt  attr.cpp  attr.h  colour.cpp  colour.h  document.cpp  document.h  expat.hh  make_unique.h  parsers.cpp  parsers.h  pathparser.cpp  pathparser.h  svg.cpp  svg.h  transformparser.cpp  transformparser.h  types.cpp  types.h
src/attr/: bidi.cpp  bidi.h  core.cpp  core.h  core_common.cpp  core_common.h  media.cpp  media.h  properties.cpp  properties.h  svg.cpp  svg.h  typed_attribute.cpp  typed_attribute.h
src/dom/: basic_element.cpp  character.cpp  element.cpp  node.cpp  node.h  qualified_name.cpp
src/dom/include/dom/: basic_element.h  character.h  element.h  node.h  qualified_name.h
src/dom/src/: CMakeLists.txt  basic_element.cpp  character.cpp  element.cpp  node.cpp  qualified_name.cpp
src/element/: svg.cpp  svg.h
src/types/: animate.cpp  animate.h  aspect_ratio.cpp  aspect_ratio.h  bidi.cpp  bidi.h  boolean.cpp  boolean.h  clock_value.cpp  clock_value.h  colour.cpp  colour.h  core.cpp  core.h  flowable_text.cpp  flowable_text.h  focus.cpp  focus.h  func_iri.cpp  func_iri.h  gradient.cpp  gradient.h  lacuna.h  length.cpp  length.h  media.cpp  media.h  opacity.cpp  opacity.h  paint.cpp  paint.h  solidcolour.cpp  solidcolour.h  stringlist.cpp  stringlist.h  svg.cpp  svg.h  text.cpp  text.h  vectoreffects.cpp  (+1 more)
src/types/parsers/: func_iri.cpp  func_iri.h
test/: CMakeLists.txt  test_colour.cpp  test_document.cpp  test_expat.cpp  test_parser_basic.cpp  test_parser_numberlist.cpp  test_path.cpp  test_transform.cpp
